// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Car: Represents a car available in the dealership.
Dealer: Represents an individual or company that sells cars.
Customer: Represents a customer of the dealership.
Inventory: Contains current stock details of cars in dealership inventory.
Sale: Represents a sale transaction of a car to a customer.
'''
}

Table Car {
    id INTEGER [primary key]
    make VARCHAR 
    model VARCHAR 
    year INTEGER 
    description VARCHAR 
    dealer_id INTEGER 
    }

Table Dealer {
    id INTEGER [primary key]
    name VARCHAR 
    address VARCHAR 
    contact_number VARCHAR 
    stock_limit INTEGER 
    inventory_total INTEGER 
    }

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    email VARCHAR 
    phone VARCHAR 
    unpaid_sales_count INTEGER 
    }

Table Inventory {
    id INTEGER [primary key]
    car_id INTEGER 
    stock_amount INTEGER 
    location VARCHAR 
    }

Table Sale {
    id INTEGER [primary key]
    car_id INTEGER 
    customer_id INTEGER 
    sale_date DATETIME 
    amount INTEGER 
    is_paid BOOLEAN 
    }



// Relationships
    Ref: Car.(dealer_id) < Dealer.(id)
    Ref: Inventory.(car_id) < Car.(id)
    Ref: Sale.(car_id) < Car.(id)
    Ref: Sale.(customer_id) < Customer.(id)
